# ATV-bench

./: .gitattributes  .gitignore  .gitmodules  BENCHMARK_CHARTER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_RETENTION.md  DEMO_FIX_PLAN.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  INCIDENTS.md  NOTICE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TODOS.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  league-deploy.yml  league-publish.yml  league.yml  live-integration.yml
arena/: Dockerfile
arena/pkg/atv_bench/: __init__.py
docs/: COMMUNITY_LEAGUE.md  FOLLOW_UPS.md  GAP_FILL_TDD_PLAN.md  HARNESS_BENCHMARKING_BLUEPRINT.md  HARNESS_BENCHMARKING_TEST_PLAN.md  HARNESS_PROTOCOL.md  LEGITIMACY_AUDIT.md  PHOENIX_HVE_CASE_STUDY.md  PHOENIX_HVE_REPLICATION_PLAN.md  PHOENIX_HVE_V4_CALIBRATION_PLAN.md  PHOENIX_HVE_V4_EVALUATION_PLAN.md  PHOENIX_HVE_V5_CALIBRATION_PLAN.md  PHOENIX_HVE_V5_EVALUATION_PLAN.md  PR19_FOLLOWUPS_TDD_PLAN.md  PRODUCTS_AND_TRACKS.md  QUICKSTART_E2E_TEST_PLAN.md  QUICKSTART_IMPLEMENTATION_PLAN.md  SANTA_ROUND1_TDD_PLAN.md  VERSIONING_AND_REPRODUCTION.md  arenas.md  errors.md  santa-round1-findings.md
docs/proof/: FULL_VERIFICATION_2026-07-21.md  PR_BODY.md  README.md
docs/proof/fingerprint-readers/: README.md  claude-manifest.json  codex-manifest.json  harnesses.txt  test-output.txt  validate-claude.txt  validate-codex.txt
docs/proof/gapfill/: LIVE_DOCKER_VERIFICATION.md  README.md  bundle_reproduce.json
docs/proof/isolation/: isolation_proof.json  isolation_proof.txt
docs/proof/item1-adjudication/: README.md  board_render.txt  honest_result.json  malicious_result.json  suicide_result.json
docs/proof/live_match/: claude-code-A_changes_r1.json  claude-code-B_changes_r1.json  match_record_v2.json  metadata.json
docs/proof/live_match_ab/: claude-code_changes_r1.json  copilot-cli_changes_r1.json  metadata.json
docs/proof/phoenix-hve-task-v1/: CALIBRATION_PREREGISTRATION.md  CALIBRATION_RESULT.md  EVALUATION_PREREGISTRATION.md  README.md  SAMPLE_SIZE_SENSITIVITY.md  TASK_EVALUATION_RESULT.md  calibration-plan-index.json  calibration-result-index.json  evaluation-preregistration.json  evaluation-result-index.json  task-selection.json
docs/proof/phoenix-hve-v5/: README.md  evidence-index.json
docs/proof/quickstart-e2e/: README.md  codex-exec-json-transcript.txt
docs/proof/quickstart-impl/: README.md
docs/proof/showcase/: leaderboard.json
docs/proof/wave-c/: README.md  matrix.json
examples/harnesses/copilot-oci/: Dockerfile  README.md  hve-core.harness.json.template  phoenix.harness.json.template  protocol_wrapper.py
examples/harnesses/generic-command/: generic_harness.py  harness.json
leaderboard/: schema.json
leaderboard/view/: index.html
league/: README.md
schemas/: atv.bundle.v1.schema.json  atv.common.v1.schema.json  atv.event.v1.schema.json  atv.harness.v1.schema.json  atv.task.v1.schema.json  atv.trial-request.v1.schema.json  atv.trial-result.v1.schema.json
scripts/: audit_github_governance.py  audit_launch_gates.py  build_demo_recording.py  build_pilot_tasks.py  build_showcase_board.py  calibrate_phoenix_hve_tasks.py  capture_isolation_proof.py  capture_live_match.py  capture_liveview_states.py  compare_phoenix_hve.py  consolidate_wave_c_proof.py  e2e_arena_matrix.py  generate_embedded_schemas.py  live_quickstart_smoke.py  make_demo_frames.py  make_demo_music.py  phoenix_hve_oci_runtime.py  phoenix_hve_task_precision.py  rerun_failed_arenas.py  run_local_verification.py  run_model_backed_eval.py  run_phoenix_hve_task_trials.py  screenshot_leaderboard.py  screenshot_verified_board.py  shot_terminal.py  summarize_phoenix_hve_calibration.py  summarize_phoenix_hve_tasks.py  summarize_phoenix_hve_v2.py
spikes/: SPIKE_REPORT.md  __init__.py  spike_codeclash_decoupling.py
src/atv_bench/: banner.py  benchmark_cli.py  bots.py  bundle.py  capture.py  cli.py  codeclash_env.py  comparison.py  config.py  containment.py  corpus.py  demo.py  demo_run.py  design.py  elo.py  errors.py  frames.py  games.py  gates.py  governance.py  harness_manifest.py  harness_selection.py  harnesses.py  integration.py  interactive.py  isolation.py  launch_audit.py  leaderboard.py  league_executor.py  lift.py  liveview.py  logscan.py  match_record.py  models.py  operator.py  pergame.py  pipeline.py  play.py  players.py  preflight.py  (+13 more)
src/atv_bench/adapters/: __init__.py  contract.py  snapshot.py
src/atv_bench/arena/: engine.py  live_server.py  referee.py  render.py
src/atv_bench/assets/: codeclash-lightcycles.Dockerfile
src/atv_bench/control_plane/: __init__.py  trial_controller.py
src/atv_bench/data/: demo_recording.json
src/atv_bench/eval/: __init__.py  _canonical.py  bundle.py  grader.py  protocol_export.py  report.py  report.schema.json  scheduler.py  stats.py  tasks.py  trial.py
src/atv_bench/fingerprint/: probe.py  provenance.py  reader.py  scan.py
src/atv_bench/harness_runtime/: __init__.py  process_bridge.py
tests/: test_action_isolation.py  test_action_malicious_bot.py  test_adapter_conformance_v1.py  test_adapter_runtime_hardening.py  test_arena_adjudication.py  test_arena_engine.py  test_arena_entrypoint.py  test_arena_image.py  test_arena_observer.py  test_arena_referee.py  test_arena_render.py  test_arena_timeout.py  test_banner.py  test_bare_adapter_registry.py  test_benchmark_cli.py  test_bot_identity_binding.py  test_bots.py  test_buildonce.py  test_bundle.py  test_capture.py  test_capture_hardening.py  test_cli.py  test_cli_play.py  test_cli_run.py  test_cli_surface.py  test_cli_usability.py  test_cli_windows_encoding.py  test_codeclash_drift.py  test_codex_adapter.py  test_codex_adapter_live.py  test_comparison.py  test_config.py  test_containment.py  test_contract.py  test_contract_real.py  test_copilot_oci_wrapper.py  test_corpus.py  test_demo_match.py  test_demo_run.py  test_design.py  (+105 more)
tests/fixtures/: CONTRACT.md
tests/protocol/: conftest.py  test_canonical_v1.py  test_capabilities_v1.py  test_contract_compatibility_v1.py  test_jsonl_v1.py  test_schemas_v1.py  test_session_v1.py
(+573 files in other folders)
