[project]
name = "atv-bench"
version = "0.1.0"
description = "Bot community league plus versioned, attested evaluation tooling for coding-agent harnesses"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45.0.7,<49",
  "typer>=0.12",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "playwright>=1.40", "pyyaml>=6.0"]
# CodeClash is not published to PyPI. Install the exact upstream commit that the
# integration seam and drift tests target. `uv sync --extra run` is therefore a
# complete, reproducible dependency path instead of relying on an absent vendor tree.
# `run` (host-subprocess harness-vs-harness) also requires Docker; fingerprint /
# submit / board / play do not.
run = [
  "codeclash @ git+https://github.com/CodeClash-ai/CodeClash.git@f0694c64ecf6abfca2bc867bad2de9333fef5be8",
  "litellm<1.80",
]

[project.scripts]
atv-bench = "atv_bench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
# OneDrive/Cloud Files rejects uv's cache hardlinks on Windows (os error 396).
# Copies are slower but make the documented clean install work on both local and
# cloud-backed worktrees.
link-mode = "copy"

[tool.hatch.build.targets.wheel]
packages = ["src/atv_bench"]

[tool.hatch.build.targets.wheel.force-include]
"src/atv_bench/view/index.html" = "atv_bench/view/index.html"
"src/atv_bench/view/live.html" = "atv_bench/view/live.html"
"src/atv_bench/view/eval.html" = "atv_bench/view/eval.html"
"src/atv_bench/eval/report.schema.json" = "atv_bench/eval/report.schema.json"

[tool.hatch.build.targets.sdist]
# Ship installable source and licensing metadata only. Benchmark tasks, real evaluation
# reports, tests, proof media, and repository operations files remain local/repository-only.
include = [
  "/src/atv_bench",
  "/pyproject.toml",
  "/README.md",
  "/LICENSE",
  "/NOTICE",
]
exclude = [
  "/reports",
  "/tests",
  "/tasks",
  "/docs",
  "/examples",
  "/spikes",
  "/_demo_replay",
  "/dist",
  "/league",
  "/leaderboard",
  "/schemas",
  "/scripts",
  "/arena",
  "/.github",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
  "spike: end-to-end spike tests that invoke real CLIs (may be slow / need auth)",
  "live: requires live CLI auth and network",
  "integration: gated tests needing Docker/containers/secrets (not run on every push)",
]
