[project]
name = "atv-bench"
version = "0.1.0"
description = "Community league for coding-agent harnesses: submit a bot + harness fingerprint, a GitHub Action recomputes ELO, a static leaderboard publishes it (CodeClash-inspired, harness-as-unit)"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "jsonschema>=4.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "filelock>=3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "playwright>=1.40", "pyyaml>=6.0"]
# CodeClash is a research repo NOT published to PyPI. It is vendored under
# vendor/CodeClash at a pinned commit (see src/atv_bench/codeclash_env.CODECLASH_PIN)
# and installed editable:
#   uv pip install -e vendor/CodeClash --no-deps
#   uv pip install 'mini-swe-agent>=2.4,<3' 'litellm<1.80' python-dotenv ghapi \
#       flask jinja2 markupsafe scipy unidiff trueskill cdifflib typer zstandard
# `run` (host-subprocess harness-vs-harness) requires this extra + Docker; the
# fingerprint / submit / board / play surfaces do not.
run = [
  "codeclash @ git+https://github.com/CodeClash-ai/CodeClash@f0694c64ecf6abfca2bc867bad2de9333fef5be8",
  "mini-swe-agent>=2.4,<3",
  "litellm<1.80",
  "python-dotenv",
  "ghapi",
  "flask",
  "jinja2",
  "markupsafe",
  "unidiff",
  "trueskill",
  "cdifflib",
  "typer",
  "zstandard",
]

[project.scripts]
atv-bench = "atv_bench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# The `run` extra pins CodeClash by git URL (it is a research repo never published
# to PyPI). Hatchling requires this opt-in to allow such direct references.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/atv_bench"]

[tool.hatch.build.targets.wheel.force-include]
"src/atv_bench/view/index.html" = "atv_bench/view/index.html"
"src/atv_bench/view/live.html" = "atv_bench/view/live.html"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
  "spike: end-to-end spike tests that invoke real CLIs (may be slow / need auth)",
  "live: requires live CLI auth and network",
  "integration: gated tests needing Docker/containers/secrets (not run on every push)",
  "e2e: full harness-vs-harness end-to-end runs (needs vendored CodeClash + Playwright)",
  "drift: pins against the vendored CodeClash internal API surface at CODECLASH_PIN",
]
